--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,23 @@
 Click==7.0
 Flask==1.0.2
-Flask-Login==0.4.1
+Flask-Login==0.5.0
 Flask-SocketIO==3.3.2
-Flask-SQLAlchemy==2.3.2
-Flask-WTF==0.14.2
-gevent==1.4.0
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==0.15.1
+gevent==21.1.2
 gevent-websocket==0.10.1
-greenlet==0.4.15
+greenlet==1.1.0
 gunicorn==19.9.0
 itsdangerous==1.1.0
-Jinja2>=2.10.1
+Jinja2==2.11.3
 MarkupSafe==1.1.1
-passlib==1.7.1
-psycopg2==2.7.7
+passlib==1.7.4
+psycopg2==2.9.1
 python-engineio==3.5.1
 python-socketio==3.1.2
 six==1.12.0
 SQLAlchemy==1.3.1
 Werkzeug==0.14.1
 WTForms==2.2.1
+zope.event==4.5.0
+zope.interface==5.4.0
